--- a/server/model-config.json
+++ b/server/model-config.json
@@ -16,5 +16,9 @@
   "CoffeeShop": {
     "dataSource": "mysql",
     "public": true
+  },
+  "Books": {
+    "dataSource": "mysql",
+    "public": true
   }
 }
